<resources>
    <string name="app_name">Jo-club</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="phone">電話</string>
    <string name="input_phone">輸入電話： </string>
    <string name="input_verification">輸入驗證碼： </string>
    <string name="verification">驗證碼</string>
    <string name="id_title">ID：</string>
    <string name="name_title">姓名：</string>
    <string name="birthday_title">生日：</string>
    <string name="age_title">年齡：</string>
    <string name="language_title">語言：</string>
    <string name="copy">複製</string>
    <string name="reply">回覆</string>
    <string name="event_title">活動名稱</string>
    <string name="event_time">活動時間</string>
    <string name="chat_room">聊天室</string>
    <string name="event_list">活動列表</string>
    <string name="show_all">顯示全部</string>
    <string name="event_location">活動地點</string>
    <string name="event_description">活動說明</string>
    <string name="search">搜尋</string>
    <string name="messages">Messages</string>
    <string name="input_message">輸入訊息</string>
    <string name="send">傳送</string>
    <string name="login_slogan">揪你所愛！一起揪更好玩</string>
    <string name="registered_as_a_member">已經註冊為會員</string>
    <string name="login">Login</string>
    <string name="Accept_after_login">登入後表示接受</string>
    <string name="terms_of_Service">服務條款</string>


    <string name="constellation_aries">牡羊座</string>
    <string name="constellation_taurus">金牛座</string>
    <string name="constellation_gemini">雙子座</string>
    <string name="constellation_cancer">巨蟹座</string>
    <string name="constellation_leo">獅子座</string>
    <string name="constellation_virgo">處女座</string>
    <string name="constellation_libra">天秤座</string>
    <string name="constellation_scorpio">天蠍座</string>
    <string name="constellation_sagittarius">射手座</string>
    <string name="constellation_capricorn">摩羯座</string>
    <string name="constellation_aquarius">水瓶座</string>
    <string name="constellation_pisces">雙魚座</string>

    <string name="notice_push">推播通知</string>
    <string name="ban_list">封鎖名單</string>
    <string name="hide_age">隱藏年紀</string>
    <string name="change_language">切換語言</string>
    <string name="language">語言</string>

    <string name="privacy_policy">隱私權政策</string>
    <string name="service_provision">服務條款</string>
    <string name="official_website">前往官方網站</string>
    <string name="facebook_website">前往Facebook粉絲專頁</string>

    <string name="service_provision_url">https://pearl.jo-club.com/zhTW/others/userterms</string>
    <string name="official_website_url">https://pearl.jo-club.com</string>
    <string name="facebook_website_url">https://www.facebook.com/JoLive.official/</string>
    <string name="privacy_policy_url">https://pearl.jo-club.com/zhTW/others/policy</string>



    <string name="multi_event">同時多開活動</string>
    <string name="chocolate_center">黑糖中心</string>
    <string name="who_watch_me">%d看過我</string>
    <string name="function">功能</string>
    <string name="support">支援</string>
    <string name="buy_back">回復購買</string>
    <string name="logout">登出</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="no_join_event">目前沒有參與任何活動</string>
    <string name="no_event">目前沒有任何活動紀錄</string>

    <string name="event_incoming">活動即將開始</string>
    <string name="sign_up_deadline">報名已截止</string>
    <string name="invite_friend">邀請朋友來參加</string>
    <string name="post">發布</string>

    <string name="pre_create_event_content">下班後的好玩事，是你改變人生的新鮮事？！～現在約起來。\n

👉 活動內容：\n

👉 想找：\n

👉 預計時間：%s\n

❗️注意事項：\n
 1.本活動如果沒有特別標示『藍色火焰』，報名後是需要主揪審核，審核通過才有出席活動的資格。\n
 2.審核通過的朋友，請準時出席，如臨時有狀況，請務必事前告知。\n
 3.請保持社交禮儀，並留意個人安全。
</string>
    <string name="event_join_full">報名人數額滿</string>
    <string name="no_notice">目前沒有任何訊息</string>

</resources>