<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FirstFragment">


    <TextView
        android:id="@+id/tv_input_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_phone"
        app:layout_constraintBottom_toTopOf="@id/tv_input_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:text="77888"
        app:layout_constraintStart_toEndOf="@+id/tv_input_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_input_verification"
        android:autofillHints="@string/app_name" />

    <TextView
        android:id="@+id/tv_input_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_verification"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/verification"
        android:inputType="phone"
        android:text="5555"
        app:layout_constraintStart_toEndOf="@+id/tv_input_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        android:autofillHints="@string/app_name" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_input_verification" />

</androidx.constraintlayout.widget.ConstraintLayout>