<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent"
    android:layout_marginEnd="20dp"
    android:layout_width="160dp"
    android:layout_height="220dp">

<androidx.cardview.widget.CardView
    android:foreground="@drawable/ripple_gray_color"
    android:background="@color/transparent"

    android:layout_marginEnd="20dp"
    android:layout_width="160dp"
    android:layout_height="209dp"
    android:layout_gravity="bottom"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp">

    <ImageView
        android:id="@+id/iv_event_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:alpha="0.9"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:background="@color/transparent"
            android:layout_width="160dp"
            android:layout_height="104dp"

            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_create_event"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_event_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:orientation="vertical"
            android:background="@color/transparent"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardCornerRadius="13dp">
                    <ImageView
                        android:id="@+id/iv_owner"
                        android:foreground="@drawable/ripple_main_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:paddingStart="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textSize="11sp"
                android:text="@string/event_time"/>

            <TextView
                android:id="@+id/tv_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:visibility="gone"
                android:text="@string/event_location"
                android:textColor="@color/colorWhite"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textSize="11sp"
                android:text="@string/event_title"/>

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/colorGrayA8"
                android:textSize="11sp"
                android:text="@string/event_description"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_event_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/event_title"
        android:layout_marginBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp" />

</androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_event_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:layout_gravity="end"
        android:src="@mipmap/ic_event_full"/>
</FrameLayout>
